# acapy-minimal-example

./: .pre-commit-config.yaml  .pylintrc  .startup_script.sh.swp  Dockerfile  Dockerfile.acapy  README.md  alice.conf.template  conftest.py  docker-compose.tunnels.yml  docker-compose.yml  minimal_example.py  ngrok.yml  pyproject.toml  setup.cfg  startup_script.sh  tunnel_endpoint.sh
.github/workflows/: Code-Quality-Check.yml  code-quality-check.yml  models.yml  publish.yml  tests.yml
acapy_controller/: controller.py  events.py  logging.py  model_base.py  models.py  onboarding.py  protocols.py
configs/: alice.yml  bob.yml
controller/: __init__.py  __main__.py  controller.py  events.py  logging.py  models.py  onboarding.py  protocols.py
controller/controller/: __main__.py  controller.py
driver/: Dockerfile  pyproject.toml
driver/controller/: __main__.py  controller.py  events.py  models.py
driver/scripts/: generate-models.sh
examples/anoncreds_endpoints/: docker-compose.yml  example.py
examples/connection_reuse/: docker-compose.yml  example.py
examples/connectionless/: docker-compose.yml  example.py
examples/did_ex_reject/: docker-compose.yml  example.py
examples/endorser_seed_routing_keys/: delete_seed.sh  docker-compose.yml  example.py  example1.py  example2.py  run.sh  sample.env
examples/endorser_seed_routing_keys/db/: init-user-db.sh
examples/json_ld/: docker-compose.yml  example.py
examples/mediation/: docker-compose.yml  example.py
examples/mediation-public-did/: docker-compose.yml  example.py
examples/mt_anoncreds_endorser/: docker-compose.yml  example.py
examples/mt_taa_test/: docker-compose.yml  example.py
examples/multitenancy/: docker-compose.yml  example.py
examples/multiuse-oob/: docker-compose.yml  example.py
examples/presenting_revoked_credential/: docker-compose.yml  example.py
examples/presenting_revoked_credential_anoncreds/: docker-compose.yml  example.py
examples/public_did_invitations/: docker-compose.yml  example.py  nginx.conf
examples/self_attested/: docker-compose.yml  example.py
examples/simple/: docker-compose.yml  example.py
examples/tunnels/: docker-compose.yml  example.py  tunnel_endpoint.sh
generator_lib/: generator.py  generator_test.py  pyproject.toml
generator_lib/jinja2_package/templates/: templateDockerfile
scripts/: aliases.json  generate-models.sh  import_check.py
tests/: conftest.py  test_credential_attachments.py  test_endorser.py  test_mediation.py  test_models.py  test_protocols.py  test_public_did_mediator.py  test_validate_public_did_multi_use.py
tests/issuer/: test_send_offer_unbound.py
webhook_listener/: Dockerfile  README.md  pyproject.toml
webhook_listener/listener/: __main__.py
