[tool.poetry]
name = "controller"
version = "0.1.0"
description = "ACA-Py Controller"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
async-selective-queue = "^0.1.0"
aiohttp = "^3.8.1"
pydantic = "^1.10.2"
blessings = "^1.7"
ruff = "^0.0.287"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pre-commit = "^2.20.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"

[tool.pytest.ini_options]
markers = "examples: test the examples"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "C", "D"]

ignore = [
    # Google Python Doc Style
    "D203", "D204", "D213", "D215", "D400", "D401", "D404", "D406", "D407",
    "D408", "D409", "D413",
    "D202", # Allow blank line after docstring
    "D104", # Don't require docstring in public package
]

line-length = 90

[tool.ruff.per-file-ignores]
"**/{tests}/*" = ["F841", "D", "E501"]
