[tool.poetry]
name = "driver"
version = "0.1.0"
description = "ACA-Py scenario driver"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
aries-cloudcontroller = {git = "https://github.com/Indicio-tech/aries-cloudcontroller-python.git", rev = "chore/update-0.7.4"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
