[tool.poetry]
name = "controller"
version = "0.1.0"
description = "ACA-Py Controller"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
async-selective-queue = "^0.1.0"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
