[tool.poetry]
name = "acapy_generator_lib"
version = "0.0.1"
description = "Generation library for creating reproducable ACA-Py environments"
authors = ["Colton Wolkins (Indicio work address) <colton@indicio.tech>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.1.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
