[tool.poetry]
name = "acapy_generator_lib"
version = "0.0.1"
description = "Generation library for creating reproducable ACA-Py environments"
authors = ["Colton Wolkins (Indicio work address) <colton@indicio.tech>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.1.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.20.0"
pylint = "^2.14.5"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
